# denis-cli

./: Cargo.toml  README.md  global.toml
.github/workflows/: rust.yml
history/: compress.sh
history/1.0.0/: denis-cli.d
history/1.0.0/.fingerprint/anstream-646b0de83d813e19/: lib-anstream  lib-anstream.json
history/1.0.0/.fingerprint/anstyle-cfcb606fbfce0cde/: lib-anstyle  lib-anstyle.json
history/1.0.0/.fingerprint/anstyle-parse-074d3ce4f1e186a1/: lib-anstyle_parse  lib-anstyle_parse.json
history/1.0.0/.fingerprint/anstyle-query-e05cf15e7f98445f/: lib-anstyle_query  lib-anstyle_query.json
history/1.0.0/.fingerprint/clap-4c164f63400af77e/: lib-clap  lib-clap.json
history/1.0.0/.fingerprint/clap_builder-bf77508df97dbc3d/: lib-clap_builder  lib-clap_builder.json
history/1.0.0/.fingerprint/clap_derive-993d7e920fe54877/: lib-clap_derive  lib-clap_derive.json
history/1.0.0/.fingerprint/clap_lex-b2a3f33f278d3a29/: lib-clap_lex  lib-clap_lex.json
history/1.0.0/.fingerprint/colorchoice-de058bcac59f4e3f/: lib-colorchoice  lib-colorchoice.json
history/1.0.0/.fingerprint/denis-cli-1ab5114a94e9cd92/: bin-denis-cli  bin-denis-cli.json  dep-bin-denis-cli  output-bin-denis-cli
history/1.0.0/.fingerprint/equivalent-7fb1db5b37cfee50/: lib-equivalent  lib-equivalent.json
history/1.0.0/lang/: el.json  en.json  es.json  fi.json
lang/: de.json  fr.json
src/: global.rs  lang_reader.rs  main.rs  repository.rs  utils.rs
src/cli/: denis.rs
src/lang/: da.json  tr.json
src/lang_reader/structures/: lang_modal.rs
(+56 files in other folders)
